--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Team Project</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
 </head>
 
@@ -21,50 +21,49 @@
     </div>
 
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-6">
         <div class="well">
-		<div class="form-group">
-				<label for="gender1" class="col-sm-2 control-label">Loan Type:</label>
+			<div class="form-group">
+				<label class="col-sm-2 control-label">Loan Type:</label>
 				<div class="col-sm-2">
-					<select class="form-control selcls" id="loanTypeDropDown" style="width: 300px" onchange="ShowGraph(this.value);">
+					<select class="form-control selcls" id="loanTypeDropDown" style="width: 300px" onchange="ShowGraph(this.value,document.getElementById
+          ('outputType').value);">
+					  <option value="" selected disabled>Please select</option>
 					  <option value="age">Debt By Age</option>
 					  <option value="size">Debt By Size</option>
 					  <option value="location">Debt by location</option>		  
 					</select>        
 				</div>
-		</div>  			
+			</div>  			
         </div>
-        <!-- <div class="panel panel-primary"> -->
-          <!-- <div class="panel-heading"> -->
-            <!-- <h3 class="panel-title">Result</h3> -->
-          <!-- </div> -->
-
-        <!-- </div> -->
-		  <!-- <div id="byage" class="panel-body"></div>
-		  <div id="bysize" class="panel-body"></div>
-		  <div id="bylocation" class="panel-body"></div> -->
       </div>
-
+      <div class="col-md-6">
+        <div class="well">
+      <div class="form-group">
+        <label class="col-sm-2 control-label">Output Type:</label>
+        <div class="col-sm-2">
+          <select class="form-control selcls" id="outputType" style="width: 300px" onchange="ShowGraph1(this.value,);">
+            
+            <option value="borrower">Number of Borrowers</option>
+            <option value="balance">Size of Debt</option>
+                  
+          </select>        
+        </div>
+      </div>        
+        </div>
+      </div>
  	</div>
-  <div class="row">
-  <div class="col-md-4">
-              <div id="by_age" ></div>
+	<div class="row">
+		<div class="col-md-12">
+			<div id="plot"></div>  
+		</div>
+	</div>
   </div>
-  <div class="col-md-4">
-              <div id="by_size" ></div>
-  </div>
-  <div class="col-md-4">
-              <div id="by_location" ></div>
-  </div>
-</div>
-</div>
 
-<script src="{{ url_for('static', filename='js/app.js') }}"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-
+<script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
 
 </body>
