--- a/templates/index.html
+++ b/templates/index.html
@@ -6,62 +6,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Team Project</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<style>
+.container {
+  position: relative;
+  text-align: center;
 
+}
+
+
+.top-right {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+  color: black;
+}
+
+</style>
 </head>
 
 <body>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Student Loan Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
-      </div>
+<div class="container">
+    <div class="card">
+		<img src="/static/debt.jpg" alt="Los Angeles" width="100%" height="300">
+		<div class="top-right"><h1>Student Loan Dashboard</h1></div>
     </div>
-
-    <div class="row">
-      <div class="col-md-6">
-        <div class="well">
-			<div class="form-group">
-				<label class="col-sm-2 control-label">Loan Type:</label>
-				<div class="col-sm-2">
-					<select class="form-control selcls" id="loanTypeDropDown" style="width: 300px" onchange="ShowGraph(this.value,document.getElementById
-          ('outputType').value);">
-					  <option value="" selected disabled>Please select</option>
-					  <option value="age">Debt By Age</option>
-					  <option value="size">Debt By Size</option>
-					  <option value="location">Debt by location</option>		  
-					</select>        
-				</div>
-			</div>  			
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="well">
-      <div class="form-group">
-        <label class="col-sm-2 control-label">Output Type:</label>
-        <div class="col-sm-2">
-          <select class="form-control selcls" id="outputType" style="width: 300px" onchange="ShowGraph1(this.value,);">
-            
-            <option value="borrower">Number of Borrowers</option>
-            <option value="balance">Size of Debt</option>
-                  
-          </select>        
-        </div>
-      </div>        
-        </div>
-      </div>
- 	</div>
-	<div class="row">
-		<div class="col-md-12">
-			<div id="plot"></div>  
+	
+	<div class="row col-sm-12">
+		<div class="col-sm-6 float-right">
+		
+			<div class="form-group float-right">
+				<label>Loan Type</label>
+				<select class="form-control selcls" id="loanTypeDropDown" style="width: 300px" onchange="ShowGraph(this.value,document.getElementById
+				('outputType').value);">
+						  <option value="" selected disabled>Please select</option>
+						  <option value="age">Debt By Age</option>
+						  <option value="size">Debt By Size</option>
+						  <option value="location">Debt by location</option>		  
+				</select> 
+			</div>
+		</div>
+		<div class="col-sm-6">
+			<div class="form-group float-left">
+				<label style="text-align: left">Output Type</label>
+			  <select class="form-control selcls" id="outputType" style="width: 300px" onchange="ShowGraph1(this.value);">				
+				<option value="borrower">Number of Borrowers</option>
+				<option value="balance">Size of Debt</option>
+					  
+			  </select> 				
+			</div>
 		</div>
 	</div>
-  </div>
+	<div class="card">
+	  <div class="card-header" id="chartResult" style="font-size: 2em;">Chart Result
+	  </div>
+	  <div class="card-body">
+			<div class="col-md-12">
+				<div id="plot"></div> 			
+			</div>
+	  </div>
+	</div>
+
+</div>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.min.js"></script>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
